# swish

./: .clang-format  .cursorrules  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture.excalidraw  issue.md  metal_debugging.md  prompt.md
.github/workflows/: ci.yml
assets/Asphalt012_1K-JPG/: Asphalt012_1K-JPG.blend  Asphalt012_1K-JPG.usdc
config/: road.toml
docs/: GLOSSARY.md  README.md  architecture.md  car_system.md  data-types.md  render-pipeline.md  research-night-scene-realism.md  research-rain-rendering.md  vma-memory.md
docs/diagrams/: data-layout.excalidraw  descriptor-sets.excalidraw  rain-architecture.excalidraw  render-pipeline.excalidraw  scene-data-flow.excalidraw  system-overview.excalidraw  vulkan-sync.excalidraw
docs/investigations/: 2026-04-21-vulkan-validation-errors.md
docs/rain/: README.md  codebase-map.md  implementation-plan.md  technique-refraction.md  technique-wiper.md
include/: stb_image.h
include/KHR/: khrplatform.h
include/glad/: gl.h
plan/: README.md  car_system_port.md
scripts/: format.sh  glslc_test.sh
shaders/: README.md  ao_blur.frag  basic.frag  basic.vert  bloom_blur.frag  bloom_extract.frag  composite.frag  depth_only.frag  depth_only.vert  fullscreen.vert  gbuffer.frag  glass.frag  glass.vert  lighting.frag  rain.frag  rain.vert  ssao.frag  ssr.frag  windshield_rain.frag  windshield_rain.vert  windshield_wetness.frag
src/: main.cpp
src/core/: README.md
src/core/App/: App.cpp  App.h
src/core/Window/: Window.cpp  Window.h
src/debug/: DebugParams.h  DebugParamsIO.cpp  DebugParamsIO.h  DebugUI.cpp  DebugUI.h  SceneParamsUniform.cpp  SceneParamsUniform.h
src/renderer/: README.md  Vertex.h  VmaUsage.cpp  renderer_architecture.excalidraw
src/renderer/CameraUniforms/: CameraUniforms.cpp  CameraUniforms.h
src/renderer/CommandManager/: CommandManager.cpp  CommandManager.h
src/renderer/DeferredLightingPipeline/: DeferredLightingPipeline.cpp  DeferredLightingPipeline.h
src/renderer/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.h
src/renderer/DepthOnlyPipeline/: DepthOnlyPipeline.cpp  DepthOnlyPipeline.h
src/renderer/Device/: Device.cpp  Device.h
src/renderer/GlassPass/: GlassPass.cpp  GlassPass.h
src/renderer/GpuResource/: GpuResource.h
src/renderer/MaterialDescriptors/: MaterialDescriptors.cpp  MaterialDescriptors.h
src/renderer/Pipeline/: Pipeline.cpp  Pipeline.h
src/renderer/Pipeline/Device/: Device.cpp  Device.h
src/renderer/PostProcessManager/: PostProcessManager.cpp  PostProcessManager.h
src/renderer/RainSystem/: RainPhysics.h  RainSystem.cpp  RainSystem.h
src/renderer/RenderPass/: RenderPass.cpp  RenderPass.h
src/renderer/Renderer/: Renderer.cpp  Renderer.h  RendererServices.h
src/renderer/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/renderer/SceneGeometry/: SceneGeometry.cpp  SceneGeometry.h
src/renderer/ScenePipeline/: ScenePipeline.cpp  ScenePipeline.h
src/renderer/Swapchain/: Swapchain.cpp  Swapchain.h
src/renderer/SyncObjects/: SyncObjects.cpp  SyncObjects.h
src/renderer/TextureManager/: TextureManager.cpp  TextureManager.h
src/renderer/VulkanContext/: VulkanContext.cpp  VulkanContext.h
src/renderer/WindshieldRainPass/: WindshieldRainPass.cpp  WindshieldRainPass.h
src/scene/: README.md  SceneTypes.h
src/scene/Camera/: Camera.cpp  Camera.h
src/scene/Entity/: CarEntity.cpp  CarEntity.h  CarPhysics.h  Entity.cpp  Entity.h
src/scene/ModelManager/: ModelManager.cpp  ModelManager.h
src/scene/RoadScene/: RoadConfig.h  RoadScene.cpp  RoadScene.h
src/scene/SceneManager/: SceneManager.cpp  SceneManager.h
src/utils/: README.md  StbImage.cpp  Types.h  VulkanCheck.h  VulkanInit.h
src/utils/FileIO/: FileIO.cpp  FileIO.h
tasks/: lessons.md  todo.md
tests/: CMakeLists.txt  README.md  test_camera.cpp  test_car_physics.cpp  test_file_io.cpp  test_pbr.cpp  test_rain.cpp  test_road_scene.cpp
tools/: README.md  sign_generator.py  toml_baker.cpp
tools/car_analyzer/: pyproject.toml  run.py
tools/car_analyzer/car_analyzer/: __init__.py  cli.py  loader.py  model.py  parts.py  renderer.py
